; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_PrintArgs.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_PrintArgs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PrintArgs(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %27

11:                                               ; preds = %2
  %12 = load i8*, i8** %3, align 8
  %13 = call i8* @CopyStrToUni(i8* %12)
  store i8* %13, i8** %6, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i8* @InternalFormatArgs(i8* %14, i32 %15, i32 1)
  store i8* %16, i8** %5, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i8* @CopyUniToStr(i8* %17)
  store i8* %18, i8** %7, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = call i32 @PrintStr(i8* %19)
  %21 = load i8*, i8** %7, align 8
  %22 = call i32 @Free(i8* %21)
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @Free(i8* %23)
  %25 = load i8*, i8** %6, align 8
  %26 = call i32 @Free(i8* %25)
  br label %27

27:                                               ; preds = %11, %10
  ret void
}

declare dso_local i8* @CopyStrToUni(i8*) #1

declare dso_local i8* @InternalFormatArgs(i8*, i32, i32) #1

declare dso_local i8* @CopyUniToStr(i8*) #1

declare dso_local i32 @PrintStr(i8*) #1

declare dso_local i32 @Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
